--- a/Web/00.Platform/YK.Core/YK.Core.csproj
+++ b/Web/00.Platform/YK.Core/YK.Core.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>YK.Core</RootNamespace>
     <AssemblyName>YK.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -42,6 +42,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -51,6 +52,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Common.Logging">
@@ -174,9 +176,9 @@
       <Project>{0ba1c14a-b63a-45bd-afe7-ca35d52d801e}</Project>
       <Name>YK.Cache</Name>
     </ProjectReference>
-    <ProjectReference Include="..\YK.Unity\YK.Unity.csproj">
+    <ProjectReference Include="..\YK.Utility\YK.Utility.csproj">
       <Project>{665d0f17-1210-4de1-90f4-091aa8e008b1}</Project>
-      <Name>YK.Unity</Name>
+      <Name>YK.Utility</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
