--- a/Web/Web/Config/Config.csproj
+++ b/Web/Web/Config/Config.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -317,9 +318,9 @@
       <Project>{79045B32-6AFF-4418-8236-EE89F0430CFD}</Project>
       <Name>YK.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\00.Platform\YK.Unity\YK.Unity.csproj">
+    <ProjectReference Include="..\..\00.Platform\YK.Utility\YK.Utility.csproj">
       <Project>{665d0f17-1210-4de1-90f4-091aa8e008b1}</Project>
-      <Name>YK.Unity</Name>
+      <Name>YK.Utility</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\01.YK.Models\YK.Models.Systems\YK.Models.Systems.csproj">
       <Project>{3d988af7-2e86-4aa0-9cb4-dfec89548d9c}</Project>
