--- a/.gitignore
+++ b/.gitignore
@@ -545,3 +545,58 @@
 /Web/YK.Common/obj/Debug/YK.Common.csprojAssemblyReference.cache
 /Web/YK.Model/obj/Debug/YK.Model.csproj.CoreCompileInputs.cache
 /Web/YK.Model/obj/Debug/YK.Model.csprojAssemblyReference.cache
+/Web/00.Platform/YK.Core/bin/Debug/YK.Utility.dll
+/Web/00.Platform/YK.Core/bin/Debug/YK.Utility.pdb
+/Web/00.Platform/YK.Core/bin/Debug/zh-Hans/Microsoft.QualityTools.Testing.Fakes.resources.dll
+/Web/00.Platform/YK.Core/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/00.Platform/YK.Core/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/00.Platform/YK.Core/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/00.Platform/YK.Core/obj/Debug/YK.Core.csproj.CopyComplete
+/Web/00.Platform/YK.Utility/bin/Debug/Common.Logging.Core.dll
+/Web/00.Platform/YK.Utility/bin/Debug/Common.Logging.Log4Net1213.dll
+/Web/00.Platform/YK.Utility/bin/Debug/Common.Logging.dll
+/Web/00.Platform/YK.Utility/bin/Debug/NPOI.OOXML.dll
+/Web/00.Platform/YK.Utility/bin/Debug/NPOI.OpenXml4Net.dll
+/Web/00.Platform/YK.Utility/bin/Debug/NPOI.OpenXmlFormats.dll
+/Web/00.Platform/YK.Utility/bin/Debug/NPOI.dll
+/Web/00.Platform/YK.Utility/bin/Debug/Newtonsoft.Json.dll
+/Web/00.Platform/YK.Utility/bin/Debug/YK.Model.dll
+/Web/00.Platform/YK.Utility/bin/Debug/YK.Model.pdb
+/Web/00.Platform/YK.Utility/bin/Debug/YK.Unity.dll
+/Web/00.Platform/YK.Utility/bin/Debug/YK.Unity.pdb
+/Web/00.Platform/YK.Utility/bin/Debug/YK.Utility.dll
+/Web/00.Platform/YK.Utility/bin/Debug/YK.Utility.pdb
+/Web/00.Platform/YK.Utility/bin/Debug/log4net.dll
+/Web/00.Platform/YK.Utility/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+/Web/00.Platform/YK.Utility/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/00.Platform/YK.Utility/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/00.Platform/YK.Utility/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Unitity.csproj.CoreCompileInputs.cache
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Unitity.csprojAssemblyReference.cache
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Unity.csproj.CoreCompileInputs.cache
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Unity.csproj.FileListAbsolute.txt
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Unity.csprojAssemblyReference.cache
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Unity.dll
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Unity.pdb
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Utility.csproj.CopyComplete
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Utility.csproj.CoreCompileInputs.cache
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Utility.csproj.FileListAbsolute.txt
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Utility.csprojAssemblyReference.cache
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Utility.dll
+/Web/00.Platform/YK.Utility/obj/Debug/YK.Utility.pdb
+/Web/01.YK.Models/YK.Models.Organization/obj/Debug/YK.Models.Organizations.csproj.CopyComplete
+/Web/01.YK.Models/YK.Models.Systems/obj/Debug/YK.Models.Systems.csproj.CopyComplete
+/Web/03.YK.Services/YK.Services.Organizations/obj/Debug/YK.Services.Organizations.csprojAssemblyReference.cache
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/YK.Utility.dll
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/YK.Utility.pdb
+/Web/03.YK.Services/YK.Services.Systems/obj/Debug/YK.Services.Systems.csproj.CopyComplete
+/Web/99.组件库/YK.Component.Office/obj/Debug/YK.Component.Office.csproj.CopyComplete
+/Web/Console/YK.Demo/obj/Debug/YK.Demo.csproj.CopyComplete
+/Web/Web/Config/bin/YK.Utility.dll
+/Web/Web/Config/bin/YK.Utility.pdb
+/Web/Web/Config/obj/Debug/Config.csproj.CopyComplete
+/Web/Web/Document/obj/Debug/Document.csproj.CopyComplete
+/Web/Web/Static/Bin/YK.Utility.dll
+/Web/Web/Static/Bin/YK.Utility.pdb
+/Web/Web/Static/Bin/zh-Hans/Microsoft.QualityTools.Testing.Fakes.resources.dll
+/Web/YK.Common/obj/Debug/YK.Common.csproj.CopyComplete
