--- a/Web/Web/Config/Config.csproj
+++ b/Web/Web/Config/Config.csproj
@@ -318,7 +318,7 @@
       <Project>{79045B32-6AFF-4418-8236-EE89F0430CFD}</Project>
       <Name>YK.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\00.Platform\YK.Unity\YK.Utility.csproj">
+    <ProjectReference Include="..\..\00.Platform\YK.Utility\YK.Utility.csproj">
       <Project>{665d0f17-1210-4de1-90f4-091aa8e008b1}</Project>
       <Name>YK.Utility</Name>
     </ProjectReference>
