.gitignore Web\00.Platform\YK.Core\CoreFramework\CoreFramework_Basic.cs Web\00.Platform\YK.Core\ServiceContainer.cs Web\00.Platform\YK.Core\YK.Core.csproj Web\Web\Config\obj\Debug\Config.dll Web\Web\Config\obj\Debug\Config.pdb Web\Web\Static\Default2.aspx.cs

--- a/.gitignore
+++ b/.gitignore
@@ -740,3 +740,295 @@
 /Web/YK.Model/obj/Debug/YK.Model.csproj.FileListAbsolute.txt
 /Web/YK.Model/obj/Debug/YK.Model.dll
 /Web/YK.Model/obj/Debug/YK.Model.pdb
+/Web/00.Platform/YK.Core/bin/Debug/Common.Logging.Core.dll
+/Web/00.Platform/YK.Core/bin/Debug/Common.Logging.Log4Net1213.dll
+/Web/00.Platform/YK.Core/bin/Debug/Common.Logging.dll
+/Web/00.Platform/YK.Core/bin/Debug/MySql.Data.dll
+/Web/00.Platform/YK.Core/bin/Debug/NPOI.OOXML.dll
+/Web/00.Platform/YK.Core/bin/Debug/NPOI.OpenXml4Net.dll
+/Web/00.Platform/YK.Core/bin/Debug/NPOI.OpenXmlFormats.dll
+/Web/00.Platform/YK.Core/bin/Debug/NPOI.dll
+/Web/00.Platform/YK.Core/bin/Debug/Oracle.DataAccess.dll
+/Web/00.Platform/YK.Core/bin/Debug/log4net.dll
+/Web/01.YK.Models/YK.Models.Organization/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/01.YK.Models/YK.Models.Organization/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/01.YK.Models/YK.Models.Organization/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/01.YK.Models/YK.Models.Systems/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/01.YK.Models/YK.Models.Systems/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/01.YK.Models/YK.Models.Systems/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/02.YK.Interfaces/YK.Interface.Organization/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/02.YK.Interfaces/YK.Interface.Organization/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/02.YK.Interfaces/YK.Interface.Organization/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/02.YK.Interfaces/YK.Interface.Systems/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/02.YK.Interfaces/YK.Interface.Systems/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/02.YK.Interfaces/YK.Interface.Systems/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/03.YK.Services/YK.Services.Organizations/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/03.YK.Services/YK.Services.Organizations/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/03.YK.Services/YK.Services.Organizations/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/Common.Logging.Core.dll
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/Common.Logging.dll
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/MySql.Data.dll
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/NPOI.OOXML.dll
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/NPOI.OpenXml4Net.dll
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/NPOI.OpenXmlFormats.dll
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/NPOI.dll
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/Oracle.DataAccess.dll
+/Web/03.YK.Services/YK.Services.Systems/bin/Debug/log4net.dll
+/Web/03.YK.Services/YK.Services.Systems/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/03.YK.Services/YK.Services.Systems/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/03.YK.Services/YK.Services.Systems/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/99.组件库/YK.Component.Attribute/bin/YK.Component.Attribute.xml
+/Web/99.组件库/YK.Component.Attribute/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/99.组件库/YK.Component.Attribute/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/99.组件库/YK.Component.Attribute/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/99.组件库/YK.Component.Office/bin/NPOI.OOXML.dll
+/Web/99.组件库/YK.Component.Office/bin/NPOI.OpenXml4Net.dll
+/Web/99.组件库/YK.Component.Office/bin/NPOI.OpenXmlFormats.dll
+/Web/99.组件库/YK.Component.Office/bin/NPOI.dll
+/Web/99.组件库/YK.Component.Office/bin/YK.Component.Attribute.xml
+/Web/99.组件库/YK.Component.Office/bin/YK.Component.Office.xml
+/Web/99.组件库/YK.Component.Office/bin/YK.Component.xml
+/Web/99.组件库/YK.Component.Office/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/99.组件库/YK.Component.Office/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/99.组件库/YK.Component.Office/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/99.组件库/YK.Component/bin/YK.Component.xml
+/Web/99.组件库/YK.Component/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/99.组件库/YK.Component/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/99.组件库/YK.Component/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/AI/bin/Debug/AI.exe.config
+/Web/AI/bin/Debug/AipSdk.dll
+/Web/AI/bin/Debug/AipSdk.xml
+/Web/AI/bin/Debug/Newtonsoft.Json.dll
+/Web/AI/bin/Debug/Newtonsoft.Json.xml
+/Web/AI/obj/Debug/AI.csproj.CopyComplete
+/Web/AI/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/AI/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/AI/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/Console/YK.Demo/bin/NPOI.OOXML.dll
+/Web/Console/YK.Demo/bin/NPOI.OpenXml4Net.dll
+/Web/Console/YK.Demo/bin/NPOI.OpenXmlFormats.dll
+/Web/Console/YK.Demo/bin/NPOI.dll
+/Web/Console/YK.Demo/bin/YK.Component.Attribute.xml
+/Web/Console/YK.Demo/bin/YK.Component.Office.xml
+/Web/Console/YK.Demo/bin/YK.Demo.exe.config
+/Web/Console/YK.Demo/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/Console/YK.Demo/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/Console/YK.Demo/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/Web/Config/bin/Antlr3.Runtime.dll
+/Web/Web/Config/bin/Antlr3.Runtime.pdb
+/Web/Web/Config/bin/Common.Logging.Core.dll
+/Web/Web/Config/bin/Common.Logging.dll
+/Web/Web/Config/bin/Config.dll.config
+/Web/Web/Config/bin/EntityFramework.SqlServer.dll
+/Web/Web/Config/bin/EntityFramework.SqlServer.xml
+/Web/Web/Config/bin/EntityFramework.dll
+/Web/Web/Config/bin/EntityFramework.xml
+/Web/Web/Config/bin/Microsoft.AspNet.Identity.Core.dll
+/Web/Web/Config/bin/Microsoft.AspNet.Identity.Core.xml
+/Web/Web/Config/bin/Microsoft.AspNet.Identity.EntityFramework.dll
+/Web/Web/Config/bin/Microsoft.AspNet.Identity.EntityFramework.xml
+/Web/Web/Config/bin/Microsoft.AspNet.Identity.Owin.dll
+/Web/Web/Config/bin/Microsoft.AspNet.Identity.Owin.xml
+/Web/Web/Config/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
+/Web/Web/Config/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
+/Web/Web/Config/bin/Microsoft.Owin.Host.SystemWeb.dll
+/Web/Web/Config/bin/Microsoft.Owin.Host.SystemWeb.xml
+/Web/Web/Config/bin/Microsoft.Owin.Security.Cookies.dll
+/Web/Web/Config/bin/Microsoft.Owin.Security.Cookies.xml
+/Web/Web/Config/bin/Microsoft.Owin.Security.Facebook.dll
+/Web/Web/Config/bin/Microsoft.Owin.Security.Facebook.xml
+/Web/Web/Config/bin/Microsoft.Owin.Security.Google.dll
+/Web/Web/Config/bin/Microsoft.Owin.Security.Google.xml
+/Web/Web/Config/bin/Microsoft.Owin.Security.MicrosoftAccount.dll
+/Web/Web/Config/bin/Microsoft.Owin.Security.MicrosoftAccount.xml
+/Web/Web/Config/bin/Microsoft.Owin.Security.OAuth.dll
+/Web/Web/Config/bin/Microsoft.Owin.Security.OAuth.xml
+/Web/Web/Config/bin/Microsoft.Owin.Security.Twitter.dll
+/Web/Web/Config/bin/Microsoft.Owin.Security.Twitter.xml
+/Web/Web/Config/bin/Microsoft.Owin.Security.dll
+/Web/Web/Config/bin/Microsoft.Owin.Security.xml
+/Web/Web/Config/bin/Microsoft.Owin.dll
+/Web/Web/Config/bin/Microsoft.Owin.xml
+/Web/Web/Config/bin/Microsoft.Web.Infrastructure.dll
+/Web/Web/Config/bin/MySql.Data.dll
+/Web/Web/Config/bin/NPOI.OOXML.dll
+/Web/Web/Config/bin/NPOI.OpenXml4Net.dll
+/Web/Web/Config/bin/NPOI.OpenXmlFormats.dll
+/Web/Web/Config/bin/NPOI.dll
+/Web/Web/Config/bin/Newtonsoft.Json.dll
+/Web/Web/Config/bin/Newtonsoft.Json.xml
+/Web/Web/Config/bin/Oracle.DataAccess.dll
+/Web/Web/Config/bin/Owin.dll
+/Web/Web/Config/bin/System.Web.Helpers.dll
+/Web/Web/Config/bin/System.Web.Helpers.xml
+/Web/Web/Config/bin/System.Web.Mvc.dll
+/Web/Web/Config/bin/System.Web.Mvc.xml
+/Web/Web/Config/bin/System.Web.Optimization.dll
+/Web/Web/Config/bin/System.Web.Optimization.xml
+/Web/Web/Config/bin/System.Web.Razor.dll
+/Web/Web/Config/bin/System.Web.Razor.xml
+/Web/Web/Config/bin/System.Web.WebPages.Deployment.dll
+/Web/Web/Config/bin/System.Web.WebPages.Deployment.xml
+/Web/Web/Config/bin/System.Web.WebPages.Razor.dll
+/Web/Web/Config/bin/System.Web.WebPages.Razor.xml
+/Web/Web/Config/bin/System.Web.WebPages.dll
+/Web/Web/Config/bin/System.Web.WebPages.xml
+/Web/Web/Config/bin/WebGrease.dll
+/Web/Web/Config/bin/log4net.dll
+/Web/Web/Config/bin/roslyn/Microsoft.Build.Tasks.CodeAnalysis.dll
+/Web/Web/Config/bin/roslyn/Microsoft.CSharp.Core.targets
+/Web/Web/Config/bin/roslyn/Microsoft.CodeAnalysis.CSharp.dll
+/Web/Web/Config/bin/roslyn/Microsoft.CodeAnalysis.VisualBasic.dll
+/Web/Web/Config/bin/roslyn/Microsoft.CodeAnalysis.dll
+/Web/Web/Config/bin/roslyn/Microsoft.VisualBasic.Core.targets
+/Web/Web/Config/bin/roslyn/System.Collections.Immutable.dll
+/Web/Web/Config/bin/roslyn/System.Reflection.Metadata.dll
+/Web/Web/Config/bin/roslyn/VBCSCompiler.exe
+/Web/Web/Config/bin/roslyn/VBCSCompiler.exe.config
+/Web/Web/Config/bin/roslyn/csc.exe
+/Web/Web/Config/bin/roslyn/vbc.exe
+/Web/Web/Config/bin/zh-Hans/EntityFramework.SqlServer.resources.dll
+/Web/Web/Config/bin/zh-Hans/EntityFramework.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.AspNet.Identity.Core.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.AspNet.Identity.EntityFramework.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.AspNet.Identity.Owin.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.Owin.Host.SystemWeb.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.Owin.Security.Facebook.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.Owin.Security.Google.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.Owin.Security.MicrosoftAccount.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.Owin.Security.Twitter.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.Owin.Security.resources.dll
+/Web/Web/Config/bin/zh-Hans/Microsoft.Owin.resources.dll
+/Web/Web/Config/bin/zh-Hans/System.Web.Helpers.resources.dll
+/Web/Web/Config/bin/zh-Hans/System.Web.Mvc.resources.dll
+/Web/Web/Config/bin/zh-Hans/System.Web.Optimization.resources.dll
+/Web/Web/Config/bin/zh-Hans/System.Web.Razor.resources.dll
+/Web/Web/Config/bin/zh-Hans/System.Web.WebPages.Deployment.resources.dll
+/Web/Web/Config/bin/zh-Hans/System.Web.WebPages.Razor.resources.dll
+/Web/Web/Config/bin/zh-Hans/System.Web.WebPages.resources.dll
+/Web/Web/Document/bin/Antlr3.Runtime.dll
+/Web/Web/Document/bin/Antlr3.Runtime.pdb
+/Web/Web/Document/bin/Document.dll.config
+/Web/Web/Document/bin/EntityFramework.SqlServer.dll
+/Web/Web/Document/bin/EntityFramework.SqlServer.xml
+/Web/Web/Document/bin/EntityFramework.dll
+/Web/Web/Document/bin/EntityFramework.xml
+/Web/Web/Document/bin/Microsoft.AspNet.Identity.Core.dll
+/Web/Web/Document/bin/Microsoft.AspNet.Identity.Core.xml
+/Web/Web/Document/bin/Microsoft.AspNet.Identity.EntityFramework.dll
+/Web/Web/Document/bin/Microsoft.AspNet.Identity.EntityFramework.xml
+/Web/Web/Document/bin/Microsoft.AspNet.Identity.Owin.dll
+/Web/Web/Document/bin/Microsoft.AspNet.Identity.Owin.xml
+/Web/Web/Document/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
+/Web/Web/Document/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
+/Web/Web/Document/bin/Microsoft.Owin.Host.SystemWeb.dll
+/Web/Web/Document/bin/Microsoft.Owin.Host.SystemWeb.xml
+/Web/Web/Document/bin/Microsoft.Owin.Security.Cookies.dll
+/Web/Web/Document/bin/Microsoft.Owin.Security.Cookies.xml
+/Web/Web/Document/bin/Microsoft.Owin.Security.Facebook.dll
+/Web/Web/Document/bin/Microsoft.Owin.Security.Facebook.xml
+/Web/Web/Document/bin/Microsoft.Owin.Security.Google.dll
+/Web/Web/Document/bin/Microsoft.Owin.Security.Google.xml
+/Web/Web/Document/bin/Microsoft.Owin.Security.MicrosoftAccount.dll
+/Web/Web/Document/bin/Microsoft.Owin.Security.MicrosoftAccount.xml
+/Web/Web/Document/bin/Microsoft.Owin.Security.OAuth.dll
+/Web/Web/Document/bin/Microsoft.Owin.Security.OAuth.xml
+/Web/Web/Document/bin/Microsoft.Owin.Security.Twitter.dll
+/Web/Web/Document/bin/Microsoft.Owin.Security.Twitter.xml
+/Web/Web/Document/bin/Microsoft.Owin.Security.dll
+/Web/Web/Document/bin/Microsoft.Owin.Security.xml
+/Web/Web/Document/bin/Microsoft.Owin.dll
+/Web/Web/Document/bin/Microsoft.Owin.xml
+/Web/Web/Document/bin/Microsoft.Web.Infrastructure.dll
+/Web/Web/Document/bin/Newtonsoft.Json.dll
+/Web/Web/Document/bin/Newtonsoft.Json.xml
+/Web/Web/Document/bin/Owin.dll
+/Web/Web/Document/bin/System.Net.Http.Formatting.dll
+/Web/Web/Document/bin/System.Net.Http.Formatting.xml
+/Web/Web/Document/bin/System.Web.Helpers.dll
+/Web/Web/Document/bin/System.Web.Helpers.xml
+/Web/Web/Document/bin/System.Web.Http.Owin.dll
+/Web/Web/Document/bin/System.Web.Http.Owin.xml
+/Web/Web/Document/bin/System.Web.Http.WebHost.dll
+/Web/Web/Document/bin/System.Web.Http.WebHost.xml
+/Web/Web/Document/bin/System.Web.Http.dll
+/Web/Web/Document/bin/System.Web.Http.xml
+/Web/Web/Document/bin/System.Web.Mvc.dll
+/Web/Web/Document/bin/System.Web.Mvc.xml
+/Web/Web/Document/bin/System.Web.Optimization.dll
+/Web/Web/Document/bin/System.Web.Optimization.xml
+/Web/Web/Document/bin/System.Web.Razor.dll
+/Web/Web/Document/bin/System.Web.Razor.xml
+/Web/Web/Document/bin/System.Web.WebPages.Deployment.dll
+/Web/Web/Document/bin/System.Web.WebPages.Deployment.xml
+/Web/Web/Document/bin/System.Web.WebPages.Razor.dll
+/Web/Web/Document/bin/System.Web.WebPages.Razor.xml
+/Web/Web/Document/bin/System.Web.WebPages.dll
+/Web/Web/Document/bin/System.Web.WebPages.xml
+/Web/Web/Document/bin/WebGrease.dll
+/Web/Web/Document/bin/roslyn/Microsoft.Build.Tasks.CodeAnalysis.dll
+/Web/Web/Document/bin/roslyn/Microsoft.CSharp.Core.targets
+/Web/Web/Document/bin/roslyn/Microsoft.CodeAnalysis.CSharp.dll
+/Web/Web/Document/bin/roslyn/Microsoft.CodeAnalysis.VisualBasic.dll
+/Web/Web/Document/bin/roslyn/Microsoft.CodeAnalysis.dll
+/Web/Web/Document/bin/roslyn/Microsoft.VisualBasic.Core.targets
+/Web/Web/Document/bin/roslyn/System.Collections.Immutable.dll
+/Web/Web/Document/bin/roslyn/System.Reflection.Metadata.dll
+/Web/Web/Document/bin/roslyn/VBCSCompiler.exe
+/Web/Web/Document/bin/roslyn/VBCSCompiler.exe.config
+/Web/Web/Document/bin/roslyn/csc.exe
+/Web/Web/Document/bin/roslyn/vbc.exe
+/Web/Web/Document/bin/zh-Hans/EntityFramework.SqlServer.resources.dll
+/Web/Web/Document/bin/zh-Hans/EntityFramework.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.AspNet.Identity.Core.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.AspNet.Identity.EntityFramework.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.AspNet.Identity.Owin.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.Owin.Host.SystemWeb.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.Owin.Security.Facebook.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.Owin.Security.Google.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.Owin.Security.MicrosoftAccount.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.Owin.Security.Twitter.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.Owin.Security.resources.dll
+/Web/Web/Document/bin/zh-Hans/Microsoft.Owin.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Net.Http.Formatting.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.Helpers.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.Http.Owin.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.Http.WebHost.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.Http.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.Mvc.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.Optimization.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.Razor.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.WebPages.Deployment.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.WebPages.Razor.resources.dll
+/Web/Web/Document/bin/zh-Hans/System.Web.WebPages.resources.dll
+/Web/Web/Document/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Web/Web/Document/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Web/Web/Document/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Web/Web/Static/Bin/Common.Logging.Core.dll
+/Web/Web/Static/Bin/Common.Logging.Log4Net1213.dll
+/Web/Web/Static/Bin/Common.Logging.dll
+/Web/Web/Static/Bin/MySql.Data.dll
+/Web/Web/Static/Bin/NPOI.OOXML.dll
+/Web/Web/Static/Bin/NPOI.OpenXml4Net.dll
+/Web/Web/Static/Bin/NPOI.OpenXmlFormats.dll
+/Web/Web/Static/Bin/NPOI.dll
+/Web/Web/Static/Bin/Newtonsoft.Json.dll
+/Web/Web/Static/Bin/Oracle.DataAccess.dll
+/Web/Web/Static/Bin/YK.Cache.pdb
+/Web/Web/Static/Bin/YK.Core.pdb
+/Web/Web/Static/Bin/YK.Model.pdb
+/Web/Web/Static/Bin/log4net.dll
+/Web/YK.Common/bin/Debug/Common.Logging.Core.dll
+/Web/YK.Common/bin/Debug/Common.Logging.dll
+/Web/YK.Common/bin/Debug/MySql.Data.dll
+/Web/YK.Common/bin/Debug/Newtonsoft.Json.dll
+/Web/YK.Common/bin/Debug/Oracle.DataAccess.dll
+/Web/YK.Common/bin/Debug/YK.Cache.dll
+/Web/YK.Common/bin/Debug/YK.Cache.pdb
+/Web/YK.Common/bin/Debug/YK.Core.dll
+/Web/YK.Common/bin/Debug/YK.Core.pdb
+/Web/YK.Common/bin/Debug/YK.Model.dll
+/Web/YK.Common/bin/Debug/YK.Model.pdb
+/Web/YK.Common/bin/Debug/YK.Utility.dll
+/Web/YK.Common/bin/Debug/YK.Utility.pdb
+/Web/YK.Common/bin/Debug/log4net.dll
