--- a/Web/00.Platform/YK.Core/YK.Core.csproj
+++ b/Web/00.Platform/YK.Core/YK.Core.csproj
@@ -54,30 +54,29 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Common.Logging">
-      <HintPath>..\DLL\Common.Logging.dll</HintPath>
+      <HintPath>..\..\DLL\Common.Logging.dll</HintPath>
     </Reference>
     <Reference Include="Common.Logging.Core">
-      <HintPath>..\DLL\Common.Logging.Core.dll</HintPath>
+      <HintPath>..\..\DLL\Common.Logging.Core.dll</HintPath>
     </Reference>
     <Reference Include="Common.Logging.Log4Net1213">
-      <HintPath>..\DLL\Common.Logging.Log4Net1213.dll</HintPath>
+      <HintPath>..\..\DLL\Common.Logging.Log4Net1213.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
-      <HintPath>..\DLL\log4net.dll</HintPath>
+      <HintPath>..\..\DLL\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\NewWeb\dll\MySql.Data.dll</HintPath>
+    <Reference Include="MySql.Data">
+      <HintPath>..\..\DLL\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLL\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Oracle.DataAccess">
-      <HintPath>..\NewWeb\dll\Oracle.DataAccess.dll</HintPath>
+      <HintPath>..\..\DLL\Oracle.DataAccess.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -174,7 +173,7 @@
       <Project>{0ba1c14a-b63a-45bd-afe7-ca35d52d801e}</Project>
       <Name>YK.Cache</Name>
     </ProjectReference>
-    <ProjectReference Include="..\YK.Unity\YK.Utility.csproj">
+    <ProjectReference Include="..\YK.Utility\YK.Utility.csproj">
       <Project>{665d0f17-1210-4de1-90f4-091aa8e008b1}</Project>
       <Name>YK.Utility</Name>
     </ProjectReference>
